--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -62,6 +62,7 @@ body {
     -50%,
     -50%
   ); /*shifts 50% of the elements height left and up*/
+  text-align: center; /*mainly to centerise the button*/
 }
 
 .heading-primary {
@@ -69,6 +70,7 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden; /*removes the shake from the animation*/
+  margin-bottom: 16px;
 }
 
 .heading-primary-main {
@@ -141,4 +143,83 @@ body {
     opacity: 1;
     transform: translate(0); /*original position*/
   }
+}
+
+@keyframes moveInButton {
+  /*browser can only animate transform and opacity*/
+  0% {
+    /*at the start*/
+    opacity: 0; /*invisible*/
+    transform: translateY(30px); /*moved to bottom*/
+  }
+
+  80% {
+    opacity: 0.8;
+    transform: translateY(-10px);
+  }
+
+  100% {
+    /*at finish*/
+    opacity: 1;
+    transform: translateY(0); /*original position*/
+  }
+}
+
+.btn:link,
+.btn:visited {
+  /*pseudo class. State of button selector. configures the special type (here the button is a link:for links: site , visit: another click!)*/
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px; /*leftright topbottom : 4 nums for four side*/
+  display: inline-block; /*to seperate it from other lines*/
+  border-radius: 100px; /*making the border round*/
+  position: relative; /*for after effect*/
+
+  /*animation*/
+  transition: all 0.2s; /*must be added to main class. has effect on all changes of it*/
+}
+
+.btn:hover {
+  transform: translateY(-3px); /*popup effect when hovered*/
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.199); /*x y blurr color .black shadow with 20% opacity*/
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.199);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+/*more pseudo elements*/
+.btn:after {
+  /*directly inherits from button prop*/
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute; /*should be relative to button*/
+  top: 0;
+  left: 0;
+  z-index: -1; /*a white sheet behind the button*/
+
+  transition: all 0.4s;
+}
+
+.btn-white:after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.5) scaleY(1.7);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInButton 1s ease-out 0.75s;
+  animation-fill-mode: backwards; /*this will auto set the zero percent property prior!*/
 }
