--- a/starter/sass/abstracts/_variables.scss
+++ b/starter/sass/abstracts/_variables.scss
@@ -1,6 +1,12 @@
+//colors
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-white: #fff;
 $color-black: #000;
 $color-gray-dark: #777;
+
+//GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
