--- a/starter/sass/abstracts/_variables.scss
+++ b/starter/sass/abstracts/_variables.scss
@@ -2,9 +2,15 @@
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
+
+$color-gray-light: #f7f7f7;
+
 $color-white: #fff;
 $color-black: #000;
 $color-gray-dark: #777;
+
+//FONT
+$default-font-size: 1.6rem;
 
 //GRID
 $grid-width: 114rem;
