--- a/starter/sass/base/_typography.scss
+++ b/starter/sass/base/_typography.scss
@@ -41,3 +41,39 @@ body {
     animation: moveInRight 1s ease-out; /*let CSS find out the rest*/
   }
 }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700; //thick
+  display: inline-block; //to reduce the filling of whole line!
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  -webkit-background-clip: text; //clips the background only behind text
+  color: transparent; //text disapears and the clip remains
+  letter-spacing: 2px;
+
+  transition: all 0.2s;
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
+}
+
+.heading-tartiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: $default-font-size;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
