--- a/starter/sass/components/_button.scss
+++ b/starter/sass/components/_button.scss
@@ -8,7 +8,7 @@
     display: inline-block; /*to seperate it from other lines*/
     border-radius: 10rem; /*making the border round*/
     position: relative; /*for after effect*/
-    font-size: 1.6rem;
+    font-size: $default-font-size;
 
     /*animation*/
     transition: all 0.2s; /*must be added to main class. has effect on all changes of it*/
@@ -57,5 +57,31 @@
   &--animated {
     animation: moveInButton 1s ease-out 0.75s;
     animation-fill-mode: backwards; /*this will auto set the zero percent property prior!*/
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size; //as it was occuring often we changed it to a variable
+    color: $color-primary;
+    display: inline-block; //to use all the cool features
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary; //the underline
+    padding: 3px;
+
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+    transform: translateY(-2px); //hover up
+  }
+
+  &:active {
+    box-shadow: 0 1rem 1rem rgba($color-black, 0.2);
+    transform: translateY(0); //push down
   }
 }
