--- a/starter/sass/pages/_home.scss
+++ b/starter/sass/pages/_home.scss
@@ -7,3 +7,27 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+.section-features {
+  padding: 20rem 0;
+  //do as we did for header
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.795),
+      rgba($color-primary-dark, 0.795)
+    ),
+    /* we reduce opacity by sliding on the colour */
+      /*adds up-left to right-bottm light-green to dark-green gradient effect*/
+      url(../img/nat-4.jpg);
+  background-size: cover;
+
+  margin-top: -10rem;
+
+  //another way of shaping
+  transform: skewY(-7deg);
+
+  //fixing the childs using direct child
+  & > * {
+    transform: skewY(7deg);
+  }
+}
