builiding the flipping card component still in progress. added flip functionality and top image

--- a/starter/sass/layout/_header.scss
+++ b/starter/sass/layout/_header.scss
@@ -11,6 +11,7 @@
   background-size: cover; /*fit into the view port*/
   background-position: top; /*top of the image stays top*/
   position: relative; /*cuz this is the parent of the child logo*/
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(
     0 0,
     100% 0,
