--- a/starter/sass/abstracts/_variables.scss
+++ b/starter/sass/abstracts/_variables.scss
@@ -3,6 +3,12 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tartiary-light: #2998ff;
+$color-tartiary-dark: #5643fa;
+
 $color-gray-light: #f7f7f7;
 
 $color-white: #fff;
