--- a/starter/sass/pages/_home.scss
+++ b/starter/sass/pages/_home.scss
@@ -31,3 +31,9 @@
     transform: skewY(7deg);
   }
 }
+
+.section-tours {
+  background-color: $color-gray-light;
+  padding: 25rem 0 50rem 0; //top right bottom left.
+  margin-top: -10rem;
+}
