finished the cards section

--- a/starter/sass/abstracts/_variables.scss
+++ b/starter/sass/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color-tartiary-light: #2998ff;
 $color-tartiary-dark: #5643fa;
 
 $color-gray-light: #f7f7f7;
+$color-gray-light-2: #eee;
 
 $color-white: #fff;
 $color-black: #000;
