--- a/starter/sass/base/_utilities.scss
+++ b/starter/sass/base/_utilities.scss
@@ -14,3 +14,13 @@
 .u-margin-bottom-small {
   margin-bottom: 1.5rem;
 }
+
+.u-margin-top-big {
+  //now our components will be independent and reusable across the pages
+  margin-top: 8rem;
+}
+
+.u-margin-top-huge {
+  //now our components will be independent and reusable across the pages
+  margin-top: 10rem;
+}
