--- a/starter/sass/components/_button.scss
+++ b/starter/sass/components/_button.scss
@@ -38,6 +38,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &:after {
+      background-color: $color-primary;
+    }
+  }
+
   /*more pseudo elements*/
   &:after {
     /*directly inherits from button prop*/
