--- a/starter/sass/components/_card.scss
+++ b/starter/sass/components/_card.scss
@@ -1,15 +1,15 @@
 .card {
   perspective: 150rem; //perspective needs to be in the parent element!. so we add card site as child
   -moz-perspective: 150rem; //needs a really high value to work.
-  height: 50rem;
+  height: 52rem;
 
   position: relative;
 
   //FUNCTIONALITY
   &__side {
-    color: white;
-    font-size: 2rem;
-    height: 50rem;
+    // color: white; these were for testing
+    // font-size: 2rem;
+    height: 52rem;
 
     transition: all 0.8s ease;
 
@@ -38,6 +38,22 @@
           to right bottom,
           $color-secondary-light,
           $color-secondary-dark
+        );
+      }
+
+      &-2 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        );
+      }
+
+      &-3 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-tartiary-light,
+          $color-tartiary-dark
         );
       }
     }
@@ -71,6 +87,8 @@
       0 100%
     ); //we did webkit so that it supports all the browsers
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 
     &--1 {
       background-image: linear-gradient(
@@ -82,11 +100,113 @@
     }
 
     &--2 {
-      background-image: url(../img/nat-5.jpg); //with respect to where the css resides
+      background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        ),
+        url(../img/nat-6.jpg); //with respect to where the css resides
     }
 
     &--3 {
-      background-image: url(../img/nat-5.jpg); //with respect to where the css resides
+      background-image: linear-gradient(
+          to right bottom,
+          $color-tartiary-light,
+          $color-tartiary-dark
+        ),
+        url(../img/nat-7.jpg); //with respect to where the css resides
     }
+  }
+
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: white;
+
+    text-align: right;
+
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+
+    width: 60%;
+  }
+
+  &__heading-span {
+    //it's a new element so no nesting
+    padding: 1rem 1.5rem;
+
+    -webkit-box-decoration-break: clone; //to make chrome thing two lines as separate line
+    box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
+    }
+
+    &--2 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.85),
+        rgba($color-primary-dark, 0.85)
+      );
+    }
+
+    &--3 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-tartiary-light, 0.85),
+        rgba($color-tartiary-dark, 0.85)
+      );
+    }
+  }
+
+  &__details {
+    padding: 3rem;
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; //simplest way to center a block element inside another block element
+
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-gray-light-2;
+        }
+      }
+    }
+  }
+
+  //Back side styling
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); //centering with absolute positioning
+
+    width: 90%;
+    text-align: center;
+  }
+
+  &__price-box {
+    text-align: center;
+    color: $color-white;
+    margin-bottom: 8rem;
+  }
+
+  &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+
+  &__price-value {
+    font-size: 6rem; //big price
+    font-weight: 100;
   }
 }
