--- a/starter/sass/abstracts/_variables.scss
+++ b/starter/sass/abstracts/_variables.scss
@@ -15,6 +15,8 @@ $color-gray-light-2: #eee;
 $color-white: #fff;
 $color-black: #000;
 $color-gray-dark: #777;
+$color-gray-dark-2: #999;
+$color-gray-dark-3: #333;
 
 //FONT
 $default-font-size: 1.6rem;
